Ренейм приложения. Теперь это RUNA

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RusShifr"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.RusShifr"
-            android:windowSoftInputMode="adjustResize"
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.ezyxip.runa.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+        </provider>
+            <activity
+                android:name=".MainActivity"
+                android:exported="true"
+                android:label="@string/app_name"
+                android:theme="@style/Theme.RusShifr"
+                android:windowSoftInputMode="adjustResize"
             >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
