Добавлены новые функции Добавлена функция экспорта словаря. Добавляется функция импорта словаря из файла

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             android:authorities="com.ezyxip.runa.fileprovider"
             android:grantUriPermissions="true"
             android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
         </provider>
             <activity
                 android:name=".MainActivity"
