--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/gerb"
+        android:icon="@drawable/clock"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/gerb"
+        android:roundIcon="@drawable/clock"
         android:supportsRtl="true"
         android:theme="@style/Theme.RusShifr"
         tools:targetApi="31">
