--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.RusShifr"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.ezyxip.russhifr.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.RusShifr"
